# mcpevent2hist

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml
sophiread/: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  README.md  Spectra.txt  environment_linux.yml  environment_mac.yml  pixi.toml  sophiread.cpp  sophiread.pc.in  sophiread_stream.cpp  test.h5  user_defined_params.txt  user_defined_params_1.txt
sophiread/FastSophiread/: CMakeLists.txt
sophiread/FastSophiread/benchmarks/: benchmark.sh  benchmark_hits2events.cpp  benchmark_mmap.cpp  benchmark_raw2events.cpp  benchmark_raw2hits.cpp
sophiread/FastSophiread/include/: abs.h  centroid.h  clustering.h  disk_io.h  fastgaussian.h  gdc_processor.h  hit.h  iposition_tof.h  neutron.h  (+2 more)
sophiread/FastSophireadLib/: CMakeLists.txt
sophiread/SophireadCLI/: CMakeLists.txt
sophiread/SophireadGUI/: CMakeLists.txt
sophiread/SophireadLib/: CMakeLists.txt
sophiread/SophireadStream/: CMakeLists.txt
sophiread/SophireadStreamCLI/: CMakeLists.txt
sophiread/benchmark/: README.md  benchmark_analysis.ipynb
sophiread/cmake/: sophireadConfig.cmake.in
sophiread/include/: abs.h  clustering.h  dbscan.h  tpx3.h  version.h
sophiread/neutron/: tof_image_Spectra.txt  tof_image_bin_0001.tiff  tof_image_bin_0003.tiff  tof_image_bin_0004.tiff  tof_image_bin_0005.tiff  tof_image_bin_0010.tiff  tof_image_bin_0017.tiff  tof_image_bin_0018.tiff  tof_image_bin_0019.tiff  tof_image_bin_0020.tiff  tof_image_bin_0021.tiff  tof_image_bin_0022.tiff  tof_image_bin_0024.tiff  tof_image_bin_0025.tiff  tof_image_bin_0029.tiff  tof_image_bin_0034.tiff  tof_image_bin_0035.tiff  tof_image_bin_0039.tiff  tof_image_bin_0041.tiff  tof_image_bin_0042.tiff  tof_image_bin_0043.tiff  tof_image_bin_0045.tiff  tof_image_bin_0046.tiff  tof_image_bin_0049.tiff  tof_image_bin_0050.tiff  tof_image_bin_0053.tiff  tof_image_bin_0056.tiff  tof_image_bin_0060.tiff  tof_image_bin_0061.tiff  tof_image_bin_0062.tiff  tof_image_bin_0064.tiff  tof_image_bin_0070.tiff  tof_image_bin_0071.tiff  tof_image_bin_0072.tiff  tof_image_bin_0074.tiff  tof_image_bin_0076.tiff  tof_image_bin_0078.tiff  tof_image_bin_0079.tiff  tof_image_bin_0080.tiff  tof_image_bin_0082.tiff  (+758 more)
sophiread/neutron_1/: tof_image_Spectra.txt  tof_image_bin_0001.tiff  tof_image_bin_0002.tiff  tof_image_bin_0003.tiff  tof_image_bin_0004.tiff  tof_image_bin_0005.tiff  tof_image_bin_0006.tiff  tof_image_bin_0007.tiff  tof_image_bin_0008.tiff  tof_image_bin_0009.tiff  tof_image_bin_0010.tiff  tof_image_bin_0011.tiff  tof_image_bin_0012.tiff  tof_image_bin_0013.tiff  tof_image_bin_0014.tiff  tof_image_bin_0015.tiff  tof_image_bin_0016.tiff  tof_image_bin_0017.tiff  tof_image_bin_0018.tiff  tof_image_bin_0019.tiff  tof_image_bin_0020.tiff  tof_image_bin_0021.tiff  tof_image_bin_0022.tiff  tof_image_bin_0023.tiff  tof_image_bin_0024.tiff  tof_image_bin_0025.tiff  tof_image_bin_0026.tiff  tof_image_bin_0027.tiff  tof_image_bin_0028.tiff  tof_image_bin_0029.tiff  tof_image_bin_0030.tiff  tof_image_bin_0031.tiff  tof_image_bin_0032.tiff  tof_image_bin_0033.tiff  tof_image_bin_0034.tiff  tof_image_bin_0035.tiff  tof_image_bin_0036.tiff  tof_image_bin_0037.tiff  tof_image_bin_0038.tiff  tof_image_bin_0039.tiff  (+1461 more)
sophiread/neutron_gdc/: tof_image_bin_0002.tiff  tof_image_bin_0006.tiff  tof_image_bin_0007.tiff  tof_image_bin_0008.tiff  tof_image_bin_0009.tiff  tof_image_bin_0011.tiff  tof_image_bin_0012.tiff  tof_image_bin_0013.tiff  tof_image_bin_0014.tiff  tof_image_bin_0015.tiff  tof_image_bin_0016.tiff  tof_image_bin_0023.tiff  tof_image_bin_0026.tiff  tof_image_bin_0027.tiff  tof_image_bin_0028.tiff  tof_image_bin_0030.tiff  tof_image_bin_0031.tiff  tof_image_bin_0032.tiff  tof_image_bin_0033.tiff  tof_image_bin_0036.tiff  tof_image_bin_0037.tiff  tof_image_bin_0038.tiff  tof_image_bin_0040.tiff  tof_image_bin_0044.tiff  tof_image_bin_0047.tiff  tof_image_bin_0048.tiff  tof_image_bin_0051.tiff  tof_image_bin_0052.tiff  tof_image_bin_0054.tiff  tof_image_bin_0055.tiff  tof_image_bin_0057.tiff  tof_image_bin_0058.tiff  tof_image_bin_0059.tiff  tof_image_bin_0063.tiff  tof_image_bin_0065.tiff  tof_image_bin_0066.tiff  tof_image_bin_0067.tiff  tof_image_bin_0068.tiff  tof_image_bin_0069.tiff  tof_image_bin_0073.tiff  (+662 more)
sophiread/neutron_tdc_vlad/: tof_image_bin_0001.tiff  tof_image_bin_0002.tiff  tof_image_bin_0003.tiff  tof_image_bin_0004.tiff  tof_image_bin_0005.tiff  tof_image_bin_0006.tiff  tof_image_bin_0007.tiff  tof_image_bin_0008.tiff  tof_image_bin_0009.tiff  tof_image_bin_0010.tiff  tof_image_bin_0011.tiff  tof_image_bin_0012.tiff  tof_image_bin_0013.tiff  tof_image_bin_0014.tiff  tof_image_bin_0015.tiff  tof_image_bin_0016.tiff  tof_image_bin_0017.tiff  tof_image_bin_0018.tiff  tof_image_bin_0019.tiff  tof_image_bin_0020.tiff  tof_image_bin_0021.tiff  tof_image_bin_0022.tiff  tof_image_bin_0023.tiff  tof_image_bin_0024.tiff  tof_image_bin_0025.tiff  tof_image_bin_0026.tiff  tof_image_bin_0027.tiff  tof_image_bin_0028.tiff  tof_image_bin_0029.tiff  tof_image_bin_0030.tiff  tof_image_bin_0031.tiff  tof_image_bin_0032.tiff  tof_image_bin_0033.tiff  tof_image_bin_0034.tiff  tof_image_bin_0035.tiff  tof_image_bin_0036.tiff  tof_image_bin_0037.tiff  tof_image_bin_0038.tiff  tof_image_bin_0039.tiff  tof_image_bin_0040.tiff  (+1460 more)
sophiread/scripts/: version.sh
sophiread/src/: CMakeLists.txt  abs.cpp  centroid.cpp  dbscan.cpp  fastgaussian.cpp  mainwindow.cpp  tpx3.cpp
sophiread/tests/: generate_fake_tpx3_data  test_clustering.cpp  test_peakfitting.cpp  test_tpx3.cpp
sophiread_v2/: CMakeLists.txt  Doxyfile  README.md  environment.yml  main.cpp  sophiread.cpp  sophiread_display.cpp  sophiread_stream.cpp
sophiread_v2/include/: abs.h  ars.h  centroid.h  clustering.h  dbscan.h  fastgaussian.h  mainwindow.h  peakfitting.h  tpx3.h
sophiread_v2/src/: abs.cpp  ars.cpp  centroid.cpp  dbscan.cpp  fastgaussian.cpp  mainwindow.cpp  tpx3.cpp
sophiread_v2/tests/: test_clustering.cpp  test_peakfitting.cpp  test_tpx3.cpp
sophiread_v2/ui/: mainwindow.ui
(+99 files in other folders)
